force-app/main/default/objects/Custom_Charge__c/Custom_Charge__c.object-meta.xml
<CustomObject>
    <label>Custom Charge</label>
    <nameField>
        <displayFormat>PV-CP-{0000000}</displayFormat>
        <label>Custom Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>