force-app/main/default/objects/Custom_Charge__c/fields/Allow_Override_Price__c.field-meta.xml
<CustomField>
    <fullName>Allow_Override_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PVFSL-266</description>
    <inlineHelpText>When this is checked users in the mobile app can manually update the price.</inlineHelpText>
    <label>Allow Override Price</label>
    <type>Checkbox</type>
</CustomField>