force-app/main/default/objects/Custom_Charge__c/fields/Custom_Charge_Product__c.field-meta.xml
<CustomField>
    <fullName>Custom_Charge_Product__c</fullName>
    <formula>CustomCharge_Products__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Charge Product</label>
    <type>Text</type>
</CustomField>