force-app/main/default/objects/Custom_Charge__c/fields/CustomCharge_Products__c.field-meta.xml
<CustomField>
    <fullName>CustomCharge_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustomCharge_Products</label>
    <referenceTo>CustomCharge_Products__c</referenceTo>
    <relationshipLabel>Custom Charges</relationshipLabel>
    <relationshipName>Custom_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>