force-app/main/default/objects/Custom_Charge__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FSL_Vendors</valueSetName>
    </valueSet>
</CustomField>