force-app/main/default/objects/Custom_Charge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CustomCharge_Products__c</columns>
    <columns>Price__c</columns>
    <columns>Quantity__c</columns>
    <columns>Vendor__c</columns>
    <columns>Service_Appointment__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>